--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
